# low-sim-pdbbind

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  init_conda_venv.sh  init_dvc_pipeline.sh  noxfile.py  pinned-versions.txt  pyproject.toml  setup.cfg
pipelines/durant_models/: .gitignore  dvc.yaml  hpo.sh  results_summary.ipynb
pipelines/durant_models/.dvc/: config
pipelines/durant_models/data/: .gitignore
pipelines/ligand_only_2d/: .gitignore  dvc.yaml  global_results_summary.ipynb  hpo.sh  local_results_summary.ipynb
pipelines/ligand_only_2d/.dvc/: config
pipelines/ligand_only_2d/data/: .gitignore
pipelines/ligand_pocket_3d/: .gitignore  dvc.yaml  hpo.sh  results_summary.ipynb
pipelines/ligand_pocket_3d/.dvc/: config
pipelines/ligand_pocket_3d/data/: .gitignore
pipelines/pdb_processing/: dvc.yaml
pipelines/pdb_processing/.dvc/: config
pipelines/pdb_processing/data/: .gitignore  aln.txt.dvc
src/low_sim_pdbbind/: __init__.py
src/low_sim_pdbbind/config/dataset/: pdb_bind_bespoke_ccdc.yaml
src/low_sim_pdbbind/config/filtering/: no_filtering.yaml  uniprot_id.yaml
src/low_sim_pdbbind/config/higher_split/: by_column.yaml  scaffold_rdkit_split.yaml
src/low_sim_pdbbind/config/lower_split/: shuffle_split.yaml
src/low_sim_pdbbind/pipelines/durant_models/OnionNet-2/: generate_features.py  train.py  train_wrapper.py
src/low_sim_pdbbind/pipelines/durant_models/config/: main.yaml
src/low_sim_pdbbind/pipelines/durant_models/rfscore/: LICENSE  train_wrapper.py
src/low_sim_pdbbind/pipelines/durant_models/stages/: get_data.py  split_data.py
src/low_sim_pdbbind/pipelines/ligand_only_2d/config/: main.yaml
src/low_sim_pdbbind/pipelines/ligand_only_2d/config/featurisation/: ECFPMD.yaml  FCFPMD_achiral.yaml  atom_pairs_MD_achiral.yaml  mw.yaml  topo_torsion_MD_achiral.yaml
src/low_sim_pdbbind/pipelines/ligand_only_2d/config/train/: catboost_regressor.yaml  random_forest_regressor.yaml  svm_regressor.yaml  xg_boost_regressor.yaml
src/low_sim_pdbbind/pipelines/ligand_only_2d/stages/: 01_featurise.py
src/low_sim_pdbbind/pipelines/ligand_pocket_3d/config/: main.yaml
src/low_sim_pdbbind/pipelines/ligand_pocket_3d/config/featurisation/: atomic_num_only.yaml  multi_graph_atomic_num_only.yaml
src/low_sim_pdbbind/pipelines/ligand_pocket_3d/config/train/: egnn.yaml  egnn_pre_trained_diffusion.yaml  egnn_pre_trained_qm.yaml  multi_graph_egnn.yaml  multi_graph_egnn_pre_trained_diffusion.yaml  multi_graph_egnn_pre_trained_qm.yaml
src/low_sim_pdbbind/pipelines/ligand_pocket_3d/stages/: 00_featurise_once.py  01_featurise.py  process_structs.py
src/low_sim_pdbbind/pipelines/pdb_processing/config/: main.yaml
src/low_sim_pdbbind/pipelines/pdb_processing/stages/: 01_process_data.py  02_high_split_data.py
src/low_sim_pdbbind/stages/: 01_fetch_data.py  02_filtering.py  03_higher_split.py  04_lower_split.py  05_train.py  06_metrics.py  __init__.py
src/low_sim_pdbbind/utils/: dir.py  io_utils.py
src/low_sim_pdbbind/utils/featurisation/: normalization.py
src/low_sim_pdbbind/utils/metrics/: metric_computation.py
src/low_sim_pdbbind/utils/splits/: by_column_split.py  tanimoto_split.py
