[metadata]
name = low-sim-pdbbind
description = A repo for benchmarking binding affinity models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Exscientia/low-sim-pdbbind
author = Exscientia
project_urls =
    Documentation = https://exscientia.github.io/low-sim-pdbbind
    Source = https://github.com/Exscientia/low-sim-pdbbind
    Issue tracker = https://github.com/Exscientia/low-sim-pdbbind/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >= 3.11
include_package_data = True
install_requires =
    molflux[openeye]>=0.6.0
    dvc[s3]
    loguru
    jupyterlab

[options.packages.find]
where = src

[options.extras_require]
ligand_pocket_3d =
    physicsml>=0.6.0
    mlflow
ligand_only_2d =
    molflux[rdkit,catboost,xgboost]
durant_models =
    oddt
    openbabel-wheel
    numpy
    openeye-toolkits
    torch
    lightning
    datasets
    scikit-learn

all =
    low_sim_pdbbind[ligand_pocket_3d,ligand_only_2d,durant_models]
